fix layout shift when hiding messages (SEO)

--- a/src/game/game.css
+++ b/src/game/game.css
@@ -23,4 +23,5 @@
   color: #fff;
   text-align: center;
   text-transform: uppercase;
+  min-height: 100px;
 }
